Add external JavaScript file to ads.html
Added a script tag to include an external JavaScript file.

--- a/ads.html
+++ b/ads.html
@@ -77,6 +77,10 @@
     </style>
 </head>
 <body>
+   <script
+  type="text/javascript"
+  src="https://pl28238238.effectivegatecpm.com/1d/09/e9/1d09e9634bc5984737927c74c69517dd.js"
+></script> 
     <nav>
         <div class="logo">OBS 📢</div>
         <div class="nav-links">
